# cmake-learning

./: README.md
ch01_01_helloworld/: CMakeLists.txt  test.cmake
ch02_01_project/: CMakeLists.txt  main.cpp
ch02_02_project/: CMakeLists.txt  main.cpp
ch02_02_project/singer/: jaychou.cpp  jaychou.h  singer.cmake
ch02_03_project/: CMakeLists.txt
ch02_03_project/singer/: CMakeLists.txt
ch02_04_project/: CMakeLists.txt  main.cpp
ch02_04_project/singer/: lamjj.h
ch02_05_project/: CMakeLists.txt
ch02_06_project/: CMakeLists.txt
ch02_06_project/so/Debug/: singer.lib
ch02_07_project/: CMakeLists.txt  main.cpp
ch02_07_project/singer/: CMakeLists.txt
ch02_08_project/singer/: CMakeLists.txt  jaychou.cpp  jaychou2.cpp  jaychou2.h  lamjj.cpp
